compiler/kernc_cli/tests/soundness/reject/initialization/pointer_static_initializer_integer_rejected.rn
// class: static-initializer-type-mismatch
// source: kernel request structs often store raw pointers; integer literals must not silently coerce into pointer fields
// stderr: mismatched types
// stderr: expected `&u8`
// stderr: found `i32`
// timeout-ms: 2000

struct framebuffer_request {
    response: &u8,
};

static REQUEST = framebuffer_request.{ response: 0 };

fn main() i32 {
    return 0;
}
